[508545] Added content assist tests for EPackage imports
The import handling had to be changed, as updating the replacementLength
string caused different behavior in content assist tests and real
editors.

The new dependencies and build settings are responsible for executing
the tests in a PDE UI environment for the UI-dependent content assist
tests can be executed.

Change-Id: I5c265df218cefcabd67e68af308d2fe00529bdec
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/pom.xml
@@ -84,6 +84,8 @@
                 <artifactId>tycho-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>${vmargs}</argLine>
+                    <!-- UI harness is required for content assist tests -->
+                    <useUIHarness>true</useUIHarness>
                 </configuration>
             </plugin>
             <plugin>
