--- a/query/tests/org.eclipse.viatra.query.patternlanguage.emf.ui.tests/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.patternlanguage.emf.ui.tests/pom.xml
@@ -9,11 +9,12 @@
 		<version>1.7.0-SNAPSHOT</version>
 		<relativePath>../../../releng/org.eclipse.viatra.parent.all/pom.xml</relativePath>
 	</parent>
-	<artifactId>org.eclipse.viatra.query.patternlanguage.emf.tests</artifactId>
+	<artifactId>org.eclipse.viatra.query.patternlanguage.emf.ui.tests</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
 	<properties>
-		<vmargs>${tycho.testArgLine} -Xmx1024m -XX:MaxPermSize=512m</vmargs>
-		<emf.workspace.location>${project.basedir}/../../target/workspace</emf.workspace.location>
+		<vmargs>${tycho.testArgLine} -Xmx1024m</vmargs>
+		<target.classifier>mars</target.classifier>
+		<java.version>1.8</java.version>
 	</properties>
 	<build>
 		<plugins>
@@ -23,12 +24,6 @@
 				<configuration>
 					<filesets>
 						<fileset>
-							<directory>emf-gen</directory>
-							<excludes>
-								<exclude>.gitignore</exclude>
-							</excludes>
-						</fileset>
-						<fileset>
 							<directory>xtend-gen</directory>
 							<excludes>
 								<exclude>.gitignore</exclude>
@@ -36,41 +31,6 @@
 						</fileset>
 					</filesets>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.tycho.extras</groupId>
-				<artifactId>tycho-eclipserun-plugin</artifactId>
-				<version>${tycho.version}</version>
-				<configuration>
-					<applicationsArgs>
-					  <args>-data ${emf.workspace.location}</args>
-					  <args>-application org.eclipse.emf.codegen.ecore.Generator</args>
-					  <args>-projects ${project.basedir}</args>
-					  <args>-model ${project.basedir}/model/typetest.genmodel</args>
-					  <args>${project.basedir}</args>
-					</applicationsArgs>
-					<dependencies>
-						<dependency>
-							<artifactId>org.eclipse.emf.codegen.ecore</artifactId>
-							<type>eclipse-plugin</type>
-						</dependency>
-					</dependencies>
-					<repositories>
-						<repository>
-							<id>indigo</id>
-							<layout>p2</layout>
-							<url>http://download.eclipse.org/releases/mars</url>
-						</repository>
-					</repositories>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>eclipse-run</goal>
-						</goals>
-						<phase>generate-sources</phase>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.eclipse.xtend</groupId>
@@ -90,12 +50,52 @@
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<configuration>
 					<argLine>${vmargs}</argLine>
+					<!-- UI harness is required for content assist tests -->
+					<useUIHarness>true</useUIHarness>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>target-platform-configuration</artifactId>
+				<configuration>
+					<resolveWithExecutionEnvironmentConstraints>false</resolveWithExecutionEnvironmentConstraints>
+					<dependency-resolution>
+						<extraRequirements>
+							<!-- to get the org.eclipse.osgi.compatibility.state plugin iff the 
+								targeted Eclipse version (e.g., Luna) has it (backwards compatible with kepler 
+								and previous versions) -->
+							<requirement>
+								<type>eclipse-feature</type>
+								<id>org.eclipse.rcp</id>
+								<versionRange>0.0.0</versionRange>
+							</requirement>
+							<!-- See https://github.com/LorenzoBettini/jbase/issues/3 https://www.eclipse.org/forums/index.php/t/1073366/ -->
+							<requirement>
+								<type>eclipse-feature</type>
+								<id>org.eclipse.jdt</id>
+								<versionRange>0.0.0</versionRange>
+							</requirement>
+						</extraRequirements>
+					</dependency-resolution>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>mac-customization</id>
+			<activation>
+				<os>
+					<family>mac</family>
+				</os>
+			</activation>
+			<properties>
+				<vmargs>${tycho.testArgLine} -Xmx1024m -XstartOnFirstThread</vmargs>
+			</properties>
+		</profile>
+	</profiles>
 </project>
