--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -25,6 +25,7 @@
         <module>../../query/plugins/org.eclipse.viatra.query.tooling.migrator</module>
         <module>../../query/tests/org.eclipse.viatra.query.patternlanguage.tests</module>
         <module>../../query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests</module>
+        <module>../../query/tests/org.eclipse.viatra.query.patternlanguage.emf.ui.tests</module>
         <module>../../query/tests/org.eclipse.viatra.query.runtime.tests</module>
         <module>../../query/tests/org.eclipse.viatra.query.runtime.base.itc.tests</module>
         <module>../../query/tests/org.eclipse.viatra.query.testing.snapshot</module>
