--- a/documentation/org.eclipse.viatra.documentation.help/build.properties
+++ b/documentation/org.eclipse.viatra.documentation.help/build.properties
@@ -1,12 +1,10 @@
 bin.includes = META-INF/,\
                plugin.xml,\
                html/,\
-               tutorial.toc.xml,\
                viatra.toc.xml,\
                org.eclipse.viatra.documentation.help.contexts.xml,\
                build.properties,\
-               about.html,\
-               cps.toc.xml
+               about.html
 src.includes = about.html
 bin.excludes = html/cps/images/raw/,\
                html/cps/asciidoctor.css,\
