[526521] Reduce amount of files packaged into the jarred documentation

--- a/documentation/org.eclipse.viatra.documentation.help/build.properties
+++ b/documentation/org.eclipse.viatra.documentation.help/build.properties
@@ -10,10 +10,9 @@ bin.excludes = html/cps/images/raw/,\
                html/cps/asciidoctor.css,\
                html/cps/coderay-asciidoctor.css,\
                html/.gitignore,\
-               html/language/asciidoctor.css,\
-               html/language/coderay-asciidoctor.css,\
-               html/tutorial/asciidoctor.css,\
-               html/tutorial/coderay-asciidoctor.css,\
                html/basic-theme.yml,\
                html/extra/,\
-               html/tutorial/tutorial.html
+               html/releases/,\
+               html/tutorial/,\
+               html/runtime/,\
+               html/language/
