[526521] Added documentation for addons

--- a/documentation/org.eclipse.viatra.documentation.help/build.properties
+++ b/documentation/org.eclipse.viatra.documentation.help/build.properties
@@ -15,4 +15,5 @@ bin.excludes = html/cps/images/raw/,\
                html/releases/,\
                html/tutorial/,\
                html/runtime/,\
-               html/language/
+               html/language/,\
+               html/addons/
