--- a/releng/org.eclipse.viatra.target.all/pom.xml
+++ b/releng/org.eclipse.viatra.target.all/pom.xml
@@ -27,23 +27,16 @@
                         </goals>
                         <configuration>
                             <artifacts>
+                                <!-- note: file names must be ${classifier}.target -->
                                 <artifact>
-                                    <!-- note: the file name must be ${classifier}.target -->
-                                    <file>indigo.target</file>
+                                    <file>mars.target</file>
                                     <type>target</type>
-                                    <classifier>indigo</classifier>
+                                    <classifier>mars</classifier>
                                 </artifact>
                                 <artifact>
-                                    <!-- note: the file name must be ${classifier}.target -->
-                                    <file>juno.target</file>
+                                    <file>neon.target</file>
                                     <type>target</type>
-                                    <classifier>juno</classifier>
-                                </artifact>
-                                <artifact>
-                                    <!-- note: the file name must be ${classifier}.target -->
-                                    <file>luna.target</file>
-                                    <type>target</type>
-                                    <classifier>luna</classifier>
+                                    <classifier>neon</classifier>
                                 </artifact>
                             </artifacts>
                         </configuration>
