[527371] Moving Eclipse Collections into query runtime feature - fixup

--- a/query/features/org.eclipse.viatra.query.runtime.feature/pom.xml
+++ b/query/features/org.eclipse.viatra.query.runtime.feature/pom.xml
@@ -33,6 +33,11 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <excludes>
+                        <plugin id="org.eclipse.collections" />
+                    </excludes>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.eclipse.tycho</groupId>
