[527469] Removes deprecated code in the query test framework and suites
Change-Id: I47378d42672f6239529f9a0fcded9e535f77e199
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>org.eclipse.viatra.query.patternlanguage.emf.tests</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
 	<properties>
-		<vmargs>${tycho.testArgLine} -Xmx1024m -XX:MaxPermSize=512m</vmargs>
+		<vmargs>${tycho.testArgLine} -Xmx1024m</vmargs>
 		<emf.workspace.location>${project.basedir}/../../target/workspace</emf.workspace.location>
 	</properties>
 	<build>
