[releng] Fixed RCPTT test suite
 * Manually include RCPTT dependencies in the test product
 * Remove all generated code from the workspaces

--- a/query/tests/org.eclipse.viatra.query.rcptt/org.eclipse.viatra.query.rcptt.tests/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.rcptt/org.eclipse.viatra.query.rcptt.tests/pom.xml
@@ -11,7 +11,6 @@
 
     <properties>
         <rootPath>${basedir}/..</rootPath>
-        <autPath>../org.eclipse.viatra.query.rcptt.product/target/products/org.eclipse.viatra.query.rcptt.product-[platform].zip</autPath>
     </properties>
 
     <build>
@@ -23,7 +22,8 @@
                 <extensions>true</extensions>
                 <configuration>
                     <aut>
-                        <explicit>${autPath}</explicit>
+                        <groupId>org.eclipse.viatra</groupId>
+                        <artifactId>org.eclipse.viatra.query.rcptt.product</artifactId>
                         <vmArgs>
                             <vmArg>${argLine}</vmArg>
                         </vmArgs>
