--- a/query/tests/org.eclipse.viatra.query.rcptt/pom.xml
+++ b/query/tests/org.eclipse.viatra.query.rcptt/pom.xml
@@ -43,6 +43,23 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+	   <repository>
+	       <id>rcptt.core</id>
+	       <layout>p2</layout>
+	       <url>http://download.eclipse.org/rcptt/release/${rcptt.version}/repository</url>
+	   </repository>
+	   <repository>
+	       <id>rcptt.runtime</id>
+	       <layout>p2</layout>
+	       <url>http://download.eclipse.org/rcptt/release/${rcptt.version}/runtime4x</url>
+	   </repository>
+	   <repository>
+	       <id>aspectj</id>
+	       <layout>p2</layout>
+	       <url>http://download.eclipse.org/tools/ajdt/37/update/</url>
+	   </repository>
+	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>rcptt-releases</id>
