--- a/transformation/plugins/org.eclipse.viatra.transformation.runtime.debug/build.properties
+++ b/transformation/plugins/org.eclipse.viatra.transformation.runtime.debug/build.properties
@@ -4,7 +4,6 @@ bin.includes = .,\
                META-INF/,\
                about.html
 jars.compile.order = .
-source.. = src/,\
-           xtend-gen/
+source.. = src/
 output.. = bin/
 src.includes = about.html
