--- a/releng/org.eclipse.viatra.parent.incubation.maven/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation.maven/pom.xml
@@ -4,7 +4,7 @@
     xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>org.eclipse.viatra.parent.incubation.maven</artifactId>
-    <name>VIATRA Design Space Exploration</name>
+    <name>VIATRA Eclipse Project (Maven Incubation Features)</name>
     <version>0.20.0-SNAPSHOT</version>
     <url>http://eclipse.org/viatra</url>
     <packaging>pom</packaging>
