--- a/addon/plugins/org.eclipse.viatra.addon.querybasedfeatures.tooling/.settings/org.sonarlint.eclipse.core.prefs
+++ b/addon/plugins/org.eclipse.viatra.addon.querybasedfeatures.tooling/.settings/org.sonarlint.eclipse.core.prefs
@@ -2,4 +2,5 @@ autoEnabled=true
 eclipse.preferences.version=1
 extraProperties=
 moduleKey=org.eclipse.viatra\:org.eclipse.viatra.addon.querybasedfeatures.tooling
+projectKey=org.eclipse.viatra\:org.eclipse.viatra.parent.all
 serverId=build
