--- a/addon/plugins/org.eclipse.viatra.addon.viewers.tooling.ui.zest/.settings/org.sonarlint.eclipse.core.prefs
+++ b/addon/plugins/org.eclipse.viatra.addon.viewers.tooling.ui.zest/.settings/org.sonarlint.eclipse.core.prefs
@@ -2,4 +2,5 @@ autoEnabled=true
 eclipse.preferences.version=1
 extraProperties=
 moduleKey=org.eclipse.viatra\:org.eclipse.viatra.addon.viewers.tooling.ui.zest
+projectKey=org.eclipse.viatra\:org.eclipse.viatra.parent.all
 serverId=build
