--- a/dse/plugins/org.eclipse.viatra.dse.genetic/.settings/org.sonarlint.eclipse.core.prefs
+++ b/dse/plugins/org.eclipse.viatra.dse.genetic/.settings/org.sonarlint.eclipse.core.prefs
@@ -2,4 +2,5 @@ autoEnabled=true
 eclipse.preferences.version=1
 extraProperties=
 moduleKey=org.eclipse.viatra\:org.eclipse.viatra.dse.genetic
+projectKey=org.eclipse.viatra\:org.eclipse.viatra.parent.all
 serverId=build
