--- a/integration/plugins/org.eclipse.viatra.integration.modisco/.settings/org.sonarlint.eclipse.core.prefs
+++ b/integration/plugins/org.eclipse.viatra.integration.modisco/.settings/org.sonarlint.eclipse.core.prefs
@@ -2,4 +2,5 @@ autoEnabled=true
 eclipse.preferences.version=1
 extraProperties=
 moduleKey=org.eclipse.viatra\:org.eclipse.viatra.integration.modisco
+projectKey=org.eclipse.viatra\:org.eclipse.viatra.parent.all
 serverId=build
