--- a/query/plugins/org.eclipse.viatra.query.runtime.rete.recipes/.settings/org.sonarlint.eclipse.core.prefs
+++ b/query/plugins/org.eclipse.viatra.query.runtime.rete.recipes/.settings/org.sonarlint.eclipse.core.prefs
@@ -2,4 +2,5 @@ autoEnabled=true
 eclipse.preferences.version=1
 extraProperties=
 moduleKey=org.eclipse.viatra\:org.eclipse.viatra.query.runtime.rete.recipes
+projectKey=org.eclipse.viatra\:org.eclipse.viatra.parent.all
 serverId=build
