--- a/query/tests/org.eclipse.viatra.query.patternlanguage.emf.ui.tests/.settings/org.sonarlint.eclipse.core.prefs
+++ b/query/tests/org.eclipse.viatra.query.patternlanguage.emf.ui.tests/.settings/org.sonarlint.eclipse.core.prefs
@@ -2,4 +2,5 @@ autoEnabled=true
 eclipse.preferences.version=1
 extraProperties=
 moduleKey=org.eclipse.viatra\:org.eclipse.viatra.query.patternlanguage.emf.tests
+projectKey=org.eclipse.viatra\:org.eclipse.viatra.parent.all
 serverId=build
