--- a/releng/org.eclipse.viatra.parent.all/pom.xml
+++ b/releng/org.eclipse.viatra.parent.all/pom.xml
@@ -41,6 +41,7 @@
 		<!-- Transformations -->
 		<module>../../transformation/plugins/org.eclipse.viatra.transformation.ui</module>
 		<module>../../transformation/plugins/org.eclipse.viatra.transformation.evm.transactions</module>
+		<module>../../transformation/tests/org.eclipse.viatra.transformation.evm.tests</module>
 		<module>../../transformation/features/org.eclipse.viatra.transformation.runtime.emf.feature</module>
 		<module>../../transformation/features/org.eclipse.viatra.transformation.evm.transactions.feature</module>
 
