--- a/maven/viatra-query-runtime/pom.xml
+++ b/maven/viatra-query-runtime/pom.xml
@@ -94,12 +94,12 @@
         <dependency>
 			<groupId>org.eclipse.collections</groupId>
 			<artifactId>eclipse-collections</artifactId>
-			<version>9.0.0</version>
+			<version>9.2.0.M1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.collections</groupId>
 			<artifactId>eclipse-collections-api</artifactId>
-			<version>9.0.0</version>
+			<version>9.2.0.M1</version>
 		</dependency>
     </dependencies>
     <parent>
