--- a/query/tests/org.eclipse.viatra.query.rcptt/org.eclipse.viatra.query.rcptt.queries/.project
+++ b/query/tests/org.eclipse.viatra.query.rcptt/org.eclipse.viatra.query.rcptt.queries/.project
@@ -6,12 +6,12 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
-			<name>org.eclipse.xtext.ui.shared.xtextBuilder</name>
+			<name>org.eclipse.viatra.query.tooling.ui.projectbuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>org.eclipse.viatra.query.tooling.core.projectbuilder</name>
+			<name>org.eclipse.xtext.ui.shared.xtextBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
@@ -35,5 +35,6 @@
 		<nature>org.eclipse.pde.PluginNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.xtext.ui.shared.xtextNature</nature>
+		<nature>org.eclipse.viatra.query.projectnature</nature>
 	</natures>
 </projectDescription>
