--- a/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/plugin.xml
+++ b/query/tests/org.eclipse.viatra.query.patternlanguage.emf.tests/plugin.xml
@@ -4,30 +4,15 @@
    <extension
          point="org.eclipse.viatra.query.patternlanguage.emf.annotation">
       <annotation
-            name="Optional">
+            provider="org.eclipse.viatra.query.patternlanguage.emf.tests.annotations.OptionalAnnotationValidator">
       </annotation>
       <annotation
-            name="Param1">
-         <annotationparameter
-               mandatory="false"
-               multiple="false"
-               name="p1"
-               type="string">
-         </annotationparameter>
+            provider="org.eclipse.viatra.query.patternlanguage.emf.tests.annotations.Param1AnnotationValidator">
       </annotation>
       <annotation
-            name="Param2">
-         <annotationparameter
-               mandatory="true"
-               multiple="false"
-               name="p1">
-         </annotationparameter>
-         <annotationparameter
-               mandatory="false"
-               multiple="false"
-               name="p2">
-         </annotationparameter>
+            provider="org.eclipse.viatra.query.patternlanguage.emf.tests.annotations.Param2AnnotationValidator">
       </annotation>
+
    </extension>
    <extension point="org.eclipse.emf.ecore.generated_package">
       <!-- @generated typetest -->
