--- a/releng/org.eclipse.viatra.parent.core/pom.xml
+++ b/releng/org.eclipse.viatra.parent.core/pom.xml
@@ -20,7 +20,12 @@
         <module>../../query/plugins/org.eclipse.viatra.query.runtime.rete.recipes</module>
         <module>../../transformation/plugins/org.eclipse.viatra.transformation.evm</module>
         <module>../../transformation/plugins/org.eclipse.viatra.transformation.runtime.emf</module>
+        <module>../../addon/plugins/org.eclipse.viatra.addon.databinding.runtime</module>
+        <module>../../addon/plugins/org.eclipse.viatra.addon.databinding.runtime.validation</module>
         <module>../../addon/plugins/org.eclipse.viatra.addon.querybasedfeatures.runtime</module>
+        <module>../../addon/plugins/org.eclipse.viatra.addon.querybasedfeatures.runtime.validation</module>
+        <module>../../addon/plugins/org.eclipse.viatra.addon.validation.runtime</module>
+        <module>../../addon/plugins/org.eclipse.viatra.addon.validation.runtime.validation</module>
         <module>../../releng/org.eclipse.viatra.target.core</module>
         <module>../../releng/org.eclipse.viatra.target.all</module>
         <module>../../releng/org.eclipse.viatra.parent</module>
