[530701] Minor fixes related to the new annotation processing
Change-Id: I5a6532b6bbc7387cf69445e1a563e4159d399c47

--- a/integration/plugins/org.eclipse.viatra.integration.uml/pom.xml
+++ b/integration/plugins/org.eclipse.viatra.integration.uml/pom.xml
@@ -62,7 +62,7 @@
                     <dependency>
                         <groupId>org.eclipse.viatra</groupId>
                         <artifactId>org.eclipse.viatra.addons.querybasedfeatures.runtime.validation</artifactId>
-                        <version>${viatra.incubation.version}</version>
+                        <version>${viatra.main.version}</version>
                     </dependency>
                 </dependencies>
                 </configuration>
