--- a/query/tests/org.eclipse.viatra.query.runtime.cps.tests/plugin.xml
+++ b/query/tests/org.eclipse.viatra.query.runtime.cps.tests/plugin.xml
@@ -5,6 +5,8 @@
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.minPriority"/>
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.maxPriority"/>
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.avgCPU"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.avgCPU2"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.avgRamRequirement"/>
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.sumCPU"/>
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.countHost"/>
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.minCPU"/>
