[531731] Initial support for reflexive transitive closure
Reflexive transitive closure is added to the language with the * syntax,
and with a semantics that state the following two patterns are
equivalent:

pattern superclassOrSelf1(cl : Class, sup : Class) {
  cl == sup;
} or {
  find superclass+(cl, sup);
}

pattern superclassOrSelf2(cl : Class, sup : Class) {
  find superclass*(cl, sup);
}

Change-Id: If4a951fe3216464c38552a41788254978d6bc338
Signed-off-by: Zoltan Ujhelyi <ujhelyiz@incquerylabs.com>

--- a/query/tests/org.eclipse.viatra.query.runtime.cps.tests/plugin.xml
+++ b/query/tests/org.eclipse.viatra.query.runtime.cps.tests/plugin.xml
@@ -135,6 +135,8 @@
   <extension id="org.eclipse.viatra.query.runtime.cps.tests.queries.TransitiveClosureQueries" point="org.eclipse.viatra.query.runtime.queryspecification">
     <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:org.eclipse.viatra.query.runtime.cps.tests.queries.TransitiveClosureQueries" id="org.eclipse.viatra.query.runtime.cps.tests.queries.TransitiveClosureQueries">
       <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.statesTC"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.statesRTC1"/>
+      <query-specification fqn="org.eclipse.viatra.query.runtime.cps.tests.queries.statesRTC2"/>
     </group>
   </extension>
   <extension id="org.eclipse.viatra.query.runtime.cps.tests.queries.TrickyJoin" point="org.eclipse.viatra.query.runtime.queryspecification">
