[530701] Finalizing serviceloader based annotation validator usage
 * Fixed dependency on QBF validator in UML integration
 * Fixed validation issues in UML integration
 * Fixed type validation for surrogate queries
 * Deploying Viewers to the Maven repository
 * Adding viewers validation dependency to rete visualizer

Change-Id: I197f4ea4c84a28c3bab6d99e724590c40437f537

--- a/maven/viatra-query-language/pom.xml
+++ b/maven/viatra-query-language/pom.xml
@@ -3,6 +3,11 @@
   <artifactId>viatra-query-language</artifactId>
   <name>VIATRA Query Language</name>
   <description>Maven module for VIATRA Query Language and Generic API</description>
+  
+  <properties>
+      <viatra.incubation.version>0.20.0-SNAPSHOT</viatra.incubation.version>
+  </properties>
+  
   <dependencies>
         <dependency>
             <groupId>org.eclipse.viatra</groupId>
