--- a/releng/org.eclipse.viatra.parent.incubation.maven/pom.xml
+++ b/releng/org.eclipse.viatra.parent.incubation.maven/pom.xml
@@ -13,6 +13,11 @@
         <module>../../transformation/plugins/org.eclipse.viatra.transformation.runtime.debug</module>
         <module>../../transformation/plugins/org.eclipse.viatra.transformation.runtime.transformationtrace</module>
         <module>../../maven/viatra-transformation-debugger-runtime</module>
+        
+        <!-- Addons -->
+        <module>../../addon/plugins/org.eclipse.viatra.addon.viewers.runtime</module>
+        <module>../../addon/plugins/org.eclipse.viatra.addon.viewers.runtime.validation</module>
+        
         <!-- DSE -->
         <module>../org.eclipse.viatra.parent.dse</module>
 
