--- a/integration/plugins/org.eclipse.viatra.integration.uml/pom.xml
+++ b/integration/plugins/org.eclipse.viatra.integration.uml/pom.xml
@@ -58,14 +58,14 @@
                             <packageClass>org.eclipse.uml2.types.TypesPackage</packageClass>
                         </metamodel>
                     </metamodels>
-                    <dependencies>
-                    <dependency>
-                        <groupId>org.eclipse.viatra</groupId>
-                        <artifactId>org.eclipse.viatra.addons.querybasedfeatures.runtime.validation</artifactId>
-                        <version>${viatra.main.version}</version>
-                    </dependency>
-                </dependencies>
                 </configuration>
+                <dependencies>
+	                <dependency>
+	                   <groupId>org.eclipse.viatra</groupId>
+	                   <artifactId>viatra-query-language-extensions</artifactId>
+	                   <version>${project.version}</version>
+	               </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
