--- a/transformation/features/org.eclipse.viatra.transformation.runtime.emf.feature/build.properties
+++ b/transformation/features/org.eclipse.viatra.transformation.runtime.emf.feature/build.properties
@@ -1,5 +1,3 @@
 bin.includes = feature.xml,\
-               feature.properties,\
-               epl-v10.html
-src.includes = feature.properties,\
-               epl-v10.html
+               feature.properties
+src.includes = feature.properties
