--- a/addon/plugins/org.eclipse.viatra.addon.viewers.runtime.zest/pom.xml
+++ b/addon/plugins/org.eclipse.viatra.addon.viewers.runtime.zest/pom.xml
@@ -4,10 +4,10 @@
     xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>org.eclipse.viatra.parent.incubation</artifactId>
+        <artifactId>org.eclipse.viatra.parent.all</artifactId>
         <groupId>org.eclipse.viatra</groupId>
-        <version>0.20.0-SNAPSHOT</version>
-        <relativePath>../../../releng/org.eclipse.viatra.parent.incubation/pom.xml</relativePath>
+        <version>2.0.0-SNAPSHOT</version>
+        <relativePath>../../../releng/org.eclipse.viatra.parent.all/pom.xml</relativePath>
     </parent>
     <artifactId>org.eclipse.viatra.addon.viewers.runtime.zest</artifactId>
     <packaging>eclipse-plugin</packaging>
