--- a/maven/viatra-query-language-extensions/pom.xml
+++ b/maven/viatra-query-language-extensions/pom.xml
@@ -90,8 +90,19 @@
         <!-- Viewers annotation support -->
         <dependency>
             <groupId>org.eclipse.viatra</groupId>
+            <artifactId>org.eclipse.viatra.transformation.views</artifactId>
+            <version>${viatra.main.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.viatra</groupId>
             <artifactId>org.eclipse.viatra.addon.viewers.runtime</artifactId>
-            <version>${viatra.incubation.version}</version>
+            <version>${viatra.main.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>*</groupId>
@@ -102,7 +113,7 @@
         <dependency>
             <groupId>org.eclipse.viatra</groupId>
             <artifactId>org.eclipse.viatra.addon.viewers.runtime.validation</artifactId>
-            <version>${viatra.incubation.version}</version>
+            <version>${viatra.main.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>*</groupId>
@@ -117,9 +128,7 @@
         <version>2.0.0-SNAPSHOT</version>
         <relativePath>../../releng/org.eclipse.viatra.parent.core/pom.xml</relativePath>
     </parent>
-    <properties>
-        <viatra.incubation.version>0.20.0-SNAPSHOT</viatra.incubation.version>
-    </properties>
+    
     <build>
         <plugins>
             <plugin>
