--- a/releng/org.eclipse.viatra.parent.core/pom.xml
+++ b/releng/org.eclipse.viatra.parent.core/pom.xml
@@ -20,6 +20,9 @@
         <module>../../query/plugins/org.eclipse.viatra.query.runtime.rete.recipes</module>
         <module>../../transformation/plugins/org.eclipse.viatra.transformation.evm</module>
         <module>../../transformation/plugins/org.eclipse.viatra.transformation.runtime.emf</module>
+        <module>../../transformation/plugins/org.eclipse.viatra.transformation.views</module>
+        <module>../../addon/plugins/org.eclipse.viatra.addon.viewers.runtime</module>
+        <module>../../addon/plugins/org.eclipse.viatra.addon.viewers.runtime.validation</module>
         <module>../../addon/plugins/org.eclipse.viatra.addon.databinding.runtime</module>
         <module>../../addon/plugins/org.eclipse.viatra.addon.databinding.runtime.validation</module>
         <module>../../addon/plugins/org.eclipse.viatra.addon.querybasedfeatures.runtime</module>
